# bibliotheque-template

./: .gitignore  CMakeLists.txt  afficherTypeDePains.h  ajouterTypeDePain.c  connection.c  constantes.h  dump copy.sql  dump.sql  enregistrerCommande.c  listerCommandesEnAttente.c  listerCommandesLivrees.c  listerToutesLesCommandes.c  main.c  main.out  mettreAJourCommande.c  readme.txt  recupererTypeDePain.c  sql.c  sql.out
.templates-boulangerie/: afficherTypeDePains.c  ajouterTypeDePain.h  commandes.txt  defines.h  enregistrerCommande.h  listerCommandesEnAttente.h  listerCommandesLivrees.h  listerToutesLesCommandes.h  mettreAJourCommande.h  recupererTypeDePain.h  structures.c  typePain.txt
Algorithme/: afficherTypeDePains.algo.txt  ajouterTypeDePain.algo.txt  defines.algo.txt  enregistrerCommande.algo.txt  listerCommandesEnAttente.algo.txt  listerCommandesLivrees.algo.txt  listerToutesLesCommandes.algo.txt  main.algo.txt  mettreAJourCommande.algo.txt  recupererTypeDePain.algo.txt  structures.algo.txt
Headers/Modules/: auth.h  bibliothecaire.h  consultation.h  document.h  emprunt.h  membre.h  rapport.h  utilisateur.h
Headers/Modules/Database/: connection.h  query_library.h
Modules/: CMakeLists.txt  auth.c  bibliothecaire.c  consultation.c  document.c  emprunt.c  membre.c  rapport.c  utilisateur.c
Modules/Database/: .query_library.c.kate-swp  connection.c  query_library.c
